objects/Demo__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GoalName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Demos</relationshipLabel>
        <relationshipName>Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demo</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>